2013-06-19 Harri Pitkänen <hatapitk@iki.fi>
	* Support more languages for LibreOffice.

2003-05-30 Sjur Moshagen <sjurnm@mac.com>
	* Support more languages for LibreOffice.

2013-01-06 Harri Pitkänen <hatapitk@iki.fi>
	* Support more languages for LibreOffice.

2012-10-27 Harri Pitkänen <hatapitk@iki.fi>
	* Support more languages for LibreOffice.

2012-02-01 Harri Pitkänen <hatapitk@iki.fi>
	* Add Komi language mappings.

2012-01-20 Harri Pitkänen <hatapitk@iki.fi>
	* Fix build with MSVC 2005.
	* Update license texts for standalone extension.

2012-01-19 Harri Pitkänen <hatapitk@iki.fi>
	* Add links to extended grammar checker help.

2012-01-02 Harri Pitkänen <hatapitk@iki.fi>
	* Avoid double delete of component objects.

2011-02-17 Tarja Lindfors <tarja@puimula.org>

	* New icon.

2011-02-16 Harri Pitkänen <hatapitk@iki.fi>

	* Specify English as the fallback language for settings dialog.

2011-02-05 Harri Pitkänen <hatapitk@iki.fi>

	* Rename source package to libreoffice-voikko.
	* Add new codes to language mapping table.
	* Remove -Werror from compiler flags, STLPort (used on 32 bit Linux)
	  headers contain code that triggers warnings with recent GCC.

2011-02-01 Harri Pitkänen <hatapitk@iki.fi>

	* Remove %origin% expansion trick from configuration, it has been unused
	  since version 3.0.
	* Document that the extension now targets primarily LibreOffice.

2010-12-22 Harri Pitkänen <hatapitk@iki.fi>

	* Add support for spell checking multiple languages.

2010-07-27 David Tardon

	* Fix broken config.xcu to work with stricter validation in OOo 3.3.

2010-05-31 Harri Pitkänen <hatapitk@iki.fi>

	* Switch to new libvoikko 3.0 API (Trac #11).
	* Ignoring grammar checker rules works (Trac #12).

2010-05-07 Harri Pitkänen <hatapitk@iki.fi>

	* Add license attribute that allows suppressing the license dialog with
	  unopkg --suppress-license.

2010-04-23 Harri Pitkänen <hatapitk@iki.fi>

	* Remove references to malaga and glib libraries for Windows and OS X.