@@ -1,3 +1,7 @@
+2013-06-26 Harri Pitkänen <hatapitk@iki.fi>
+	* Avoid querying available spelling languages too often since
+	  it's very slow for zhfst spellers.
+
 2013-06-19 Harri Pitkänen <hatapitk@iki.fi>
 	* Support more languages for LibreOffice.
 
